fix: fixed keywords

--- a/package.json
+++ b/package.json
@@ -61,28 +61,17 @@
   },
   "jsdelivr": "dist/prepare-stack-trace.min.js",
   "keywords": [
-    "auth",
-    "authentication",
-    "browser",
-    "connect",
-    "consistent",
-    "err",
-    "errors",
-    "express",
-    "headers",
-    "koa",
-    "lad",
-    "lass",
+    "cabin",
+    "error",
+    "fallback",
     "logger",
-    "logging",
     "node",
-    "normalized",
-    "object",
-    "parse",
-    "passport",
-    "properties",
-    "req",
-    "user"
+    "polyfill",
+    "ponyfill",
+    "prepare",
+    "prepareStackTrace",
+    "stack",
+    "trace"
   ],
   "license": "MIT",
   "lint-staged": {
